# django-historical-currencies

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  runtests.py  tox.ini
.github/workflows/: analysis.yml  django.yml  release.yml
historical_currencies/: __init__.py  admin.py  apps.py  choices.py  exceptions.py  exchange.py  models.py  tests.py
historical_currencies/management/commands/: import_ecb_exchangerates.py  import_openexchangerates.py
historical_currencies/migrations/: 0001_initial.py
historical_currencies/templates/historical_currencies/: currency_choices_options.html
historical_currencies/templatetags/: currency_choices.py  currency_format.py
historical_currencies/tests/: test_checks.py  test_exchange.py  test_formatting.py  test_importers.py  test_models.py  test_templatetags.py
src/currencies/: admin.py  exchange.py  formatting.py  models.py  tests.py
src/currencies/management/commands/: import_ecb_exchangerates.py  import_openexchangerates.py
src/currencies/migrations/: 0001_initial.py
src/currencies/templatetags/: currency_format.py
tests/: test_settings.py
