[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[project]
name = "django-historical-currencies"
authors = [
    {name = "Stefano Rivera", email = "stefano@rivera.za.net"},
]
description = "Django currencies with historical exchange rates"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'django',
    'iso4217',
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/stefanor/django-historical-currencies/"
Changelog = "https://github.com/stefanor/django-historical-currencies/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["historical_currencies"]

[tool.setuptools.dynamic]
version = {attr = "historical_currencies.__version__"}
